# safelists

./: .gitmodules  CMakeLists.txt  README.md  bdoc  buildindocker  innerbuild  interactive  mxeentry  releaseboth
appData/: refid  safelists.crust.config
buildutil/: extractcert  extractcertfile  files-to-package.txt  flatglobcopy  genversion  hacked-gcc  packagestuff  signzip
exampleData/: example-sig.json  example1.safelist  example2.safelist  example3.safelist  full-schema.sql  raw-new-safelist.sql  trigger-drop.sql  trigger-schema.sql
exampleData/dlsessions/1/: safelist_session
exampleData/dlsessions/2/: safelist_session  thelist.safelist
exampleData/rsa-keys/: examplekeys.json  private-test.pem  public-test.pem
misc/: icon.res  icon.xcf
rootData/: safelists.crust.config  signature.json
src/: dumbhash.cpp  main.cpp  sign-json.cpp
src/gtkmm/: GenericGtkWidget.cpp  GenericGtkWidget.hpp  GenericGtkWidgetInterface.hpp  GtkMMFileString.cpp  GtkMMFileString.hpp  GtkMMRangerModel.cpp  GtkMMRangerModel.hpp  GtkMMSessionWidget.cpp  GtkMMSessionWidget.hpp  GtkMMThemeManager.cpp  GtkMMThemeManager.hpp
src/io/: AsyncDownloader.cpp  AsyncDownloader.hpp  Interval.cpp  Interval.hpp  RandomFileWriter.cpp  RandomFileWriter.hpp  RandomFileWriterImpl.cpp  RandomFileWriterImpl.hpp  SafeListDownloader.cpp  SafeListDownloader.hpp  SafeListDownloaderFactory.cpp  SafeListDownloaderFactory.hpp  SafeListDownloaderInternal.hpp
src/lua/: domaingui.lua  genericwidget.lua  main.lua  messages.lua  objretainer.lua  safelist-constants.lua  settings.lua  sqlite.lua  util.lua
src/meta/: GlobalConsts.cpp  GlobalConsts.hpp  Licensing.cpp  Licensing.hpp  SignatureCheck.cpp  SignatureCheck.hpp
src/model/: AsyncSqlite.cpp  AsyncSqlite.hpp  AsyncSqliteFactory.cpp  AsyncSqliteFactory.hpp  IndexedListView.hpp  SqliteRanger.cpp  SqliteRanger.hpp  TableSnapshot.cpp  TableSnapshot.hpp
src/rust/: rust_sodium.patch
src/rust/SafeFileDownloader/: Cargo.toml
src/rust/SafeNetApi/: Cargo.toml
src/rust/include/: safe_ffi.h  safe_file_downloader.h
src/rust/safe_file_downloader/: Cargo.toml
src/rust/safe_file_downloader/src/: lib.rs  main.rs
src/uischemes/: download_progress.glade  licensing.glade  main.glade
src/util/: AutoReg.cpp  AutoReg.hpp  Base64.c  Base64.cpp  Base64.h  Base64.hpp  DumbHash.hpp  DummyStruct.hpp  GenericShutdownGuard.hpp  GenericStMessageable.cpp  GenericStMessageable.hpp  GracefulShutdownGuard.cpp  GracefulShutdownGuard.hpp  GracefulShutdownInterface.hpp  Misc.cpp  Misc.hpp  ProgramArgs.cpp  ProgramArgs.hpp  ScopeGuard.hpp  Semaphore.hpp
tests/: downloader-tests.cpp  graceful-shutdown-tests.cpp  interval-tests.cpp  io-tests.cpp  meta-tests.cpp  model-tests.cpp  util-tests.cpp
