[package]
name = "safe_file_downloader"
version = "0.1.0"
authors = ["David <david@templatious.org>"]

[dependencies]
libc = "0.2.2"
safe_core = "0.11.0"
sodiumoxide = "0.0.9"
regex = "0.1.8"
quick-error = "0.1.4"
rustc-serialize = "0.3.18"

[lib]
name = "safefiledownloader"
crate-type = [ "dylib" ]
