[package]
name = "safe_file_downloader"
version = "0.1.1"
authors = ["David <david@templatious.org>"]

[dependencies]
libc = "0.2.2"
safe_core = "0.22.0"
regex = "0.1.8"
quick-error = "0.1.4"
rustc-serialize = "0.3.19"

[lib]
name = "safefiledownloader"
crate-type = [ "rlib", "dylib" ]

[[bin]]
name = "safefiledownloader"
path = "src/main.rs"
